// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberButton renders div with not-available className when props.isAvailable is false 1`] = `
<div
  className="NumberButton not-available"
>
  1
</div>
`;

exports[`NumberButton renders div with when props.isAvailable is true 1`] = `
<div
  className="NumberButton "
>
  1
</div>
`;
